recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:8: error: not found: value pentaKOch
		pentaKOch(levels-1,length*0.4)
                ^